--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title></title>
+  <title>Github startup tutorial motherfucker
+  </title>
   
   <!--lav beskrivelse af sidens content-->
   
